added notification panel end css changes

--- a/Public/Pages/index.html
+++ b/Public/Pages/index.html
@@ -112,7 +112,7 @@
                     <div class="header-options-language">
                         <img src="../Images/language-logo.png">
                     </div>
-                    <div class="header-options-notifications">
+                    <div id="notify-btn" class="header-options-notifications" onclick="toggleNotificationMenu()">
                         <img src="../Images/notification-logo.png">
                     </div>
                     <button type="button" onclick="signOut()" class="header-options-leave">
@@ -122,10 +122,85 @@
                 </div>
             </div>
 
+            <div id="notification-panel">
+                <div class="notification-panel-header">
+                    <h3>Notifications</h3>
+                </div>
+                <div class="notification-panel-body">
+                    <div class="notification-panel-message">
+                        <div class="notification-panel-message-top">
+                            <p class="notification-panel-message-top-title">Tittle:</p>
+                            <p class="notification-panel-message-top-body"> Body</p>
+                        </div>
+                        <div class="notification-panel-message-bottom">
+                            <p class="notification-panel-message-bottom-date">date</p>
+                        </div>
+                    </div>
+
+                    <div class="notification-panel-message">
+                        <div class="notification-panel-message-top">
+                            <p class="notification-panel-message-top-title">Title:</p>
+                            <p class="notification-panel-message-top-body"> Body</p>
+                        </div>
+                        <div class="notification-panel-message-bottom">
+                            <p class="notification-panel-message-bottom-date">date</p>
+                        </div>
+                    </div>
+
+                    <div class="notification-panel-message">
+                        <div class="notification-panel-message-top">
+                            <p class="notification-panel-message-top-title">Title:</p>
+                            <p class="notification-panel-message-top-body"> Body</p>
+                        </div>
+                        <div class="notification-panel-message-bottom">
+                            <p class="notification-panel-message-bottom-date">date</p>
+                        </div>
+                    </div>
+
+                    <div class="notification-panel-message">
+                        <div class="notification-panel-message-top">
+                            <p class="notification-panel-message-top-title">Title:</p>
+                            <p class="notification-panel-message-top-body"> Body</p>
+                        </div>
+                        <div class="notification-panel-message-bottom">
+                            <p class="notification-panel-message-bottom-date">date</p>
+                        </div>
+                    </div>
+
+                    <div class="notification-panel-message">
+                        <div class="notification-panel-message-top">
+                            <p class="notification-panel-message-top-title">Title:</p>
+                            <p class="notification-panel-message-top-body"> Body</p>
+                        </div>
+                        <div class="notification-panel-message-bottom">
+                            <p class="notification-panel-message-bottom-date">date</p>
+                        </div>
+                    </div>
+
+                    <div class="notification-panel-message">
+                        <div class="notification-panel-message-top">
+                            <p class="notification-panel-message-top-title">Title:</p>
+                            <p class="notification-panel-message-top-body"> Body</p>
+                        </div>
+                        <div class="notification-panel-message-bottom">
+                            <p class="notification-panel-message-bottom-date">date</p>
+                        </div>
+                    </div>
+
+                    <div class="notification-panel-message">
+                        <div class="notification-panel-message-top">
+                            <p class="notification-panel-message-top-title">Title:</p>
+                            <p class="notification-panel-message-top-body"> Body</p>
+                        </div>
+                        <div class="notification-panel-message-bottom">
+                            <p class="notification-panel-message-bottom-date">date</p>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+
             <div class="panel" id="add-camera-menu">
-                <!-- <div class="add-camera-menu-cancel">
-                    <img onclick=toggleCancelMenu() src="../Images/cancel-logo.png">
-                </div> -->
                 <div class="add-camera-menu-title">
                     <h1>Add Camera</h1>
                 </div>
@@ -624,24 +699,6 @@
                     </div>
                     <div class="footer-info-bottom">
                         <p>Gonçalo Vidal | João Paulo | Duarte Rodrigues | João Calisto</p>
-                    </div>
-                </div>
-                <div class="footer-update">
-                    <div class="footer-update-left">
-                        <div class="footer-update-left-logo">
-                            <img src="../Images/tick-logo.png">
-                        </div>
-                        <div class="footer-update-left-label">
-                            something updated
-                        </div>
-                    </div>
-                    <div class="footer-update-right">
-                        <div class="footer-update-right-logo">
-                            <img src="../Images/tick-logo.png">
-                        </div>
-                        <div class="footer-update-right-label">
-                            camera updated
-                        </div>
                     </div>
                 </div>
             </div>
