--- a/Public/Pages/index.html
+++ b/Public/Pages/index.html
@@ -113,7 +113,7 @@
                         <img src="../Images/language-logo.png">
                     </div>
                     <div id="notify-btn" class="header-options-notifications" onclick="toggleNotificationMenu()">
-                        <p id="notification-number"></p>
+                        <p id="notification-number" style="color: red;"></p>
                         <img src="../Images/notification-logo.png">
                     </div>
                     <button type="button" onclick="signOut()" class="header-options-leave">
@@ -123,7 +123,7 @@
                 </div>
             </div>
 
-            <div id="notification-panel">
+            <div id="notification-panel" style="display: none;">
                 <div class="notification-panel-header">
                     <h3>Notifications</h3>
                 </div>
