--- a/Public/Pages/index.html
+++ b/Public/Pages/index.html
@@ -19,6 +19,9 @@
             <div class="logo-nav">
                 <div class="logo-nav-logo">
                 </div>
+                <div class="logo-nav-hamburguer">
+                    <button type="button" id="logo-nav-hamburger-btn" onclick="clicked_menu()"></button>
+                </div>
             </div>
 
             <div class="menu-options">
@@ -77,14 +80,17 @@
             </div>
 
             <div class="social-network">
-                <div class="social-network-image">
-                    <img src="../Images/social-logo.png">
+                <div class="social-network-image"  data-hover-text="Gonçalo Vidal">
+                    <img src="../Images/Linkedin-logo.png">
                 </div>
-                <div class="social-network-image">
-                    <img src="../Images/social-logo.png">
+                <div class="social-network-image" data-hover-text="João Paulo">
+                    <img src="../Images/Linkedin-logo.png">
                 </div>
-                <div class="social-network-image">
-                    <img src="../Images/social-logo.png">
+                <div class="social-network-image" data-hover-text="Duarte Rodrigues"  data-url="https://www.linkedin.com/in/duarte-rodrigues-6b084b2b4/">
+                    <img src="../Images/Linkedin-logo.png">
+                </div>
+                <div class="social-network-image" data-hover-text="João Calisto">
+                    <img src="../Images/Linkedin-logo.png">
                 </div>
             </div>
         </div>
@@ -129,7 +135,7 @@
 
             </div>
 
-            <div class="panel" id="add-camera-menu">
+            <div id="add-camera-menu">
                 <div class="add-camera-menu-title">
                     <h1>Add Camera</h1>
                 </div>
