side quest no front end

--- a/Public/Pages/index.html
+++ b/Public/Pages/index.html
@@ -88,6 +88,7 @@
             </div>
 
             <div class="social-network">
+                <p class="social-network-made-by">Made by</p>
                 <div class="social-network-image"  data-hover-text="Gonçalo Vidal" data-url="https://www.linkedin.com/in/gon%C3%A7alo-vidal-ab3980169/">
                     <img src="../Images/goncalovidalimg.jpg" style="border-radius: 20px;">
                 </div>
