--- a/Public/Pages/index.html
+++ b/Public/Pages/index.html
@@ -122,7 +122,7 @@
 
                     </div>
                     <div id="notify-btn" class="header-options-notifications" onclick="toggleNotificationMenu()">
-                        <p id="notification-number" style="color: red;"></p>
+                        <p id="notification-number" style="color: white"></p>
                         <img src="../Images/notification-logo.png">
                     </div>
                     <button type="button" onclick="signOut()" class="header-options-leave">
