--- a/Public/Pages/index.html
+++ b/Public/Pages/index.html
@@ -501,6 +501,7 @@
             </div>
 
             <div id="live-feed-container">
+                <h1>Livefeed of Camera: </h1>
                 <video id="hls-video" controls>
                     <!-- Fallback content for browsers that do not support HLS -->
                     <source id="live-source" src="http://172.208.31.254/live/camerasf.m3u8" type="application/x-mpegURL">
