Added notification front end and markAllAsRead function

--- a/Public/Pages/index.html
+++ b/Public/Pages/index.html
@@ -89,16 +89,20 @@
 
             <div class="social-network">
                 <p class="social-network-made-by">Made by</p>
-                <div class="social-network-image"  data-hover-text="Gonçalo Vidal" data-url="https://www.linkedin.com/in/gon%C3%A7alo-vidal-ab3980169/">
+                <div class="social-network-image" data-hover-text="Gonçalo Vidal"
+                    data-url="https://www.linkedin.com/in/gon%C3%A7alo-vidal-ab3980169/">
                     <img src="../Images/goncalovidalimg.jpg" style="border-radius: 20px;">
                 </div>
-                <div class="social-network-image" data-hover-text="João Paulo" data-url="https://www.linkedin.com/in/jo%C3%A3o-pedro-paulo/">
+                <div class="social-network-image" data-hover-text="João Paulo"
+                    data-url="https://www.linkedin.com/in/jo%C3%A3o-pedro-paulo/">
                     <img src="../Images/joaopauloimg.png" style="border-radius: 20px;">
                 </div>
-                <div class="social-network-image" data-hover-text="Duarte Rodrigues"  data-url="https://www.linkedin.com/in/duarte-rodrigues-6b084b2b4/">
+                <div class="social-network-image" data-hover-text="Duarte Rodrigues"
+                    data-url="https://www.linkedin.com/in/duarte-rodrigues-6b084b2b4/">
                     <img src="../Images/duarteimg.png" style="border-radius: 20px;">
                 </div>
-                <div class="social-network-image" data-hover-text="João Calisto" data-url="https://www.youtube.com/watch?v=YvrWzbp7B4g">
+                <div class="social-network-image" data-hover-text="João Calisto"
+                    data-url="https://www.youtube.com/watch?v=YvrWzbp7B4g">
                     <img src="../Images/joaocalistoimg.png" style="border-radius: 20px;">
                 </div>
             </div>
@@ -135,10 +139,11 @@
             <div id="notification-panel" style="display: none;">
                 <div class="notification-panel-header">
                     <h4>Notifications</h4>
+                    <button id="mark-all-read" onclick="markAllAsRead()">Mark all as read</button>
                 </div>
                 <div class="notification-panel-body" id="dynamicNotificationBody">
                 </div>
-
+                
             </div>
 
             <div id="add-camera-menu">
@@ -495,7 +500,8 @@
                 <div class="panel-upload">
                     <h1>Upload frame to analyze</h1>
                     <input type="file" id="frameInput">
-                    <button type="button" onclick="uploadFrame()" id="uploadSingleFrame">Upload and Process Frame</button>
+                    <button type="button" onclick="uploadFrame()" id="uploadSingleFrame">Upload and Process
+                        Frame</button>
                     <div class="panel-upload-processed-frame" id="result"></div>
                 </div>
             </div>
