cleared comments and deleted baseline files

--- a/Public/Pages/index.html
+++ b/Public/Pages/index.html
@@ -498,11 +498,13 @@
 
             <div class="panel" id="uploadArea">
                 <div class="panel-upload">
-                    <h1>Upload frame to analyze</h1>
-                    <input type="file" id="frameInput">
-                    <button type="button" onclick="uploadFrame()" id="uploadSingleFrame">Upload and Process
-                        Frame</button>
-                    <div class="panel-upload-processed-frame" id="result"></div>
+                    <div class="panel-upload-container">
+                        <h1>Upload frame to analyze</h1>
+                        <input type="file" id="frameInput">
+                        <button type="button" onclick="uploadFrame()" id="uploadSingleFrame">Upload and Process
+                            Frame</button>
+                        <div class="panel-upload-processed-frame" id="result"></div>
+                    </div>
                 </div>
             </div>
 
