fixed yolo button

--- a/Public/Pages/index.html
+++ b/Public/Pages/index.html
@@ -512,7 +512,7 @@
                 <h3 id="live-feed-container-title">Livefeed:</h3>
                 <h1 id="live-feed-container-camera_name"></h1>
                 <canvas id="frame-canvas" style="display: none;"></canvas>
-                <img class="live-feed-container-yolo" id="processed-image" alt="Processed Image" style="display: none;" />
+                <img src="../Images/loading.png" class="live-feed-container-yolo" id="processed-image" alt="Processed Image" style="display: none;" />
                 <video id="hls-video" controls>
                     Your browser does not support HTML5 video.
                 </video>
