fixed in camera streaming

--- a/Public/Pages/index.html
+++ b/Public/Pages/index.html
@@ -511,9 +511,13 @@
                 <button id="yolo-btn" onclick="toggleYolo()">YOLO</button>
                 <h3 id="live-feed-container-title">Livefeed:</h3>
                 <h1 id="live-feed-container-camera_name"></h1>
+
+                <div id="video-container"></div>
+                <div id="processed-images-container"></div>
+
                 <canvas id="frame-canvas" style="display: none;"></canvas>
                 <img src="../Images/loading.png" class="live-feed-container-yolo" id="processed-image" alt="Processed Image" style="display: none;" />
-                <video id="hls-video" controls>
+                <video autoplay="true" muted="muted" id="hls-video" controls>
                     Your browser does not support HTML5 video.
                 </video>
             </div>
