--- a/Public/Pages/index.html
+++ b/Public/Pages/index.html
@@ -306,13 +306,13 @@
                 <div class="add-camera-options-confirmations">
                     <div class="add-camera-options-confirmations-imageAnonymity">
                         <input id="policy-01" type="checkbox">
-                        <label>Customer Understands and agrees that RoboticsCats may randomly sample customer's
+                        <label>Customer Understands and agrees that Leitek may randomly sample customer's
                             image for AI wildfire detection development. All images will be used anonymously and
                             deleted after development</label>
                     </div>
                     <div class="add-camera-options-confirmations-storagePrivacy">
                         <input id="policy-02" type="checkbox">
-                        <label>Customer understands and agrees that RoboticsCats will delete raw images after 7
+                        <label>Customer understands and agrees that Leitek will delete raw images after 7
                             days. Please uncheck if you want to delete raw images immediatly after AI
                             detection</label>
                     </div>
@@ -509,7 +509,7 @@
 
             <div id="live-feed-container">
                 <button id="cancel-btn" onclick="togglePopup()">Close</button>
-                <h3 id="live-feed-container-title">Livefeed:</h3>
+                <h3 id="live-feed-container-title">Live Feed:</h3>
                 <h1 id="live-feed-container-camera_name"></h1>
 
                 <div id="video-container"></div>
