--- a/Public/Pages/index.html
+++ b/Public/Pages/index.html
@@ -13,7 +13,12 @@
 </head>
 
 <body onload="loadIndex()">
-    <div class="main">
+    <div id="loading-screen">
+        <div class="spinner"></div>
+        <div class="loading-message">Loading your safety...</div>
+    </div>
+
+    <div class="main" id="main-page" style="display: none;">
         <div class="side-nav">
 
             <div class="logo-nav">
@@ -206,6 +211,8 @@
                             <input type="text" id="add-camera-brand-model" placeholder="Brand & Model">
                             <label for="add-camera-admin-url">Camera Web Admin URL</label>
                             <input type="text" id="add-camera-admin-url" placeholder="https://">
+                            <label for="camera-user">User</label>
+                            <input type="text" id="camera-user" placeholder="Camera user">
                         </div>
                         <div class="add-camera-menu-options-settings-right">
                             <label for="add-camera-location">GPS Location*</label>
@@ -214,8 +221,10 @@
                             <input type="text" id="add-camera-site-name" placeholder="Site Name">
                             <label for="add-camera-azimuth-bearing">Azimuth / Bearing</label>
                             <input type="text" id="add-camera-azimuth-bearing" value="0">
-                            <label for="add-camera-public-ip">Camera Public IP Address</label>
-                            <input type="text" id="add-camera-public-ip" placeholder="Camera Public IP Address">
+                            <label for="add-camera-public-ip">Camera IP Address</label>
+                            <input type="text" id="add-camera-public-ip" placeholder="Camera IP Address">
+                            <label for="camera-pass">Password</label>
+                            <input type="text" id="camera-pass" placeholder="Camera password">
                         </div>
                     </div>
 
@@ -500,7 +509,7 @@
                     <div class="panel-upload-container">
                         <h1>Upload frame to analyze</h1>
                         <input type="file" id="frameInput">
-                        <button type="button" onclick="uploadFrame()" id="uploadSingleFrame">Upload and Process
+                        <button type="button" onclick="uploadSingleFrame()" id="uploadSingleFrame">Upload and Process
                             Frame</button>
                         <div class="panel-upload-processed-frame" id="result"></div>
                     </div>
@@ -524,7 +533,8 @@
                     <h2 id="detection-container-time"></h2>
                 </div>
 
-                <img src="../Images/loading.png" class="live-feed-container-yolo" id="processed-image" alt="Processed Image" style="display: none;" />
+                <img src="../Images/loading.png" class="live-feed-container-yolo" id="processed-image"
+                    alt="Processed Image" style="display: none;" />
                 <canvas id="frame-canvas" style="display: none;"></canvas>
             </div>
 
