--- a/Public/Pages/index.html
+++ b/Public/Pages/index.html
@@ -360,7 +360,7 @@
                         </div>
                         <div class="panel-information-statistics-smoke">
                             <div class="panel-information-statistics-smoke-title">
-                                <p>Overall smoke detected</p>
+                                <p>Overall detections</p>
                             </div>
                             <div class="panel-information-statistics-smoke-container">
                                 <div class="panel-information-statistics-smoke-24-hours">
